Set up bibliography and created first equation.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1,4 +1,5 @@
 \documentclass{article}
+\usepackage{cite}
 \title{My first document}
 \date{2013-09-01}
 \author{John Doe}
@@ -8,6 +9,60 @@
   \newpage
   \pagenumbering{arabic}
   \tableofcontents
+  \newpage
+  \section{Abstract}
+  
+  
+  \newpage
   \section{Introduction}
   Hello World!
+
+  \newpage  
+  \section{Literature Review}
+  Blablabla said Nobody ~\cite{caesarendra2017review}.\\
+  Blablabla said Nobody ~\cite{soualhi2021novel}.
+
+  \newpage  
+  \section{Methodology}
+  \subsection{Features}
+  \subsubsection{Time Domain}
+  \subsubsection{Mean}
+  \subsubsection{Standard Deviation}  
+  \[ x^n + y^n = z^n \]
+  $$ Var =\frac{\sum^N_{i=1}(x_i-m)^2}{(N-1)\sigma^2} $$
+  \subsubsection{Root Mean Square (RMS)}  
+  \subsubsection{Signal to Noise Ratio (SNR)} 
+  \subsubsection{SIgnal-to-Noise And Distortion (SINAD)} 
+  \subsubsection{Peak Value} 
+  \subsubsection{Shape Factor} 
+  \subsubsection{Impulse Factor} 
+  \subsubsection{Kurtosis} 
+  \subsubsection{Skewness} 
+  \subsubsection{Crest Factor} 
+  \subsubsection{Clearance Factor} 
+  \subsubsection{Total Harmonic Distortion (THD)}   
+
+  \newpage 
+  \subsubsection{Frequency Domain}
+  \subsubsection{Band Power}
+  \subsubsection{Peak Amplitude}
+  \subsubsection{Peak Frequency}
+
+  \newpage  
+  \section{Results}
+
+  \newpage  
+  \section{Conclusion}
+
+  \newpage 
+  \section{Discussion} 
+
+  \newpage  
+  \section{References} 
+  \bibliography{References}
+  \bibliographystyle{plain} 
+
+  \newpage  
+  \section{Appendix A}
+
 \end{document}
