Add scipt for comparing combined features (time and frequency domain)

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -95,6 +95,7 @@ Features in the frequency domain.
 \subsubsection{Band Power}
 \subsubsection{Peak Amplitude}
 \subsubsection{Peak Frequency}
+\subsubsection{Best Subset Selection}
 
 \newpage  
 \section{Results}
