Commit latex doc. Implement a sample table and add plot of signal 21.20.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -55,11 +55,50 @@ Guide yourself by eliminating features which are highly correlated between each 
 
 \subsection{Description of Data}
 The data used for this analysis consists of an hour of operational data for 15 days. I do now know whether it was taken from the same time each day. The assumption is that the file name corresponds with the data that the data was taken.
+
+\begin{center}
+\begin{tabular}{ |c|c|c| }
+ \hline
+ cell1 & cell2 & cell3 \\ 
+ \hline
+ cell4 & cell5 & cell6 \\  
+ \hline
+ cell7 & cell8 & cell9  \\
+ \hline
+\end{tabular}
+\end{center}
+
+Figure \ref{fig:SignalTrace21.20} shows 21:20 Actual moment under Rolls (Nm)
+
 \begin{figure}[!ht]
     \centering
-    \includegraphics{figures/SignalTrace21.07.png}
-    \caption{SignalTrace21.07}
-    \label{fig:SignalTrace21.07}
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.20.png}
+    \caption{SignalTrace21.20}
+    \label{fig:SignalTrace21.20}
+\end{figure}
+
+Figure \ref{fig:SignalTrace21.12} shows ...
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.12.png}
+    \caption{SignalTrace21.12}
+    \label{fig:SignalTrace21.12}
+\end{figure}
+
+Figure \ref{fig:SignalTrace21.28} shows ...
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.28.png}
+    \caption{SignalTrace21.28}
+    \label{fig:SignalTrace21.28}
+\end{figure}
+
+Figure \ref{fig:SignalTrace21.35} shows ...
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.35.png}
+    \caption{SignalTrace21.35}
+    \label{fig:SignalTrace21.35}
 \end{figure}
 \subsection{Pre-processing sand State detection}
 The state detection for this application will be performed using one signal in particular./n
@@ -123,14 +162,14 @@ Figure \ref{fig:StateDetection} shows the pulses that were identified for from e
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics{figures/StateDetectionFig.eps}
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/StateDetectionFig.eps}
     \caption{State detection signal vs 21:20 Actual moment under Rollers}
     \label{fig:StateDetection}
 \end{figure}
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics{figures/IdentifiedPulsesFig.eps}
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/IdentifiedPulsesFig.eps}
     \caption{XXX}
     \label{fig:IdentifiedPulses}
 \end{figure}
