--- a/Latex Document/tables/correlationTable.tex
+++ b/Latex Document/tables/correlationTable.tex
@@ -1,17 +1,17 @@
 \begin{tiny}\begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline
 &\textbf{07}&\textbf{10}&\textbf{12}&\textbf{17}&\textbf{20}&\textbf{28}&\textbf{31}&\textbf{32}&\textbf{33}&\textbf{34}&\textbf{35}&\textbf{36}\\\hline
-\textbf{07}&1.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00\\\hline
-\textbf{10}&0.93&1.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00\\\hline
-\textbf{12}&0.07&0.07&1.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00\\\hline
-\textbf{17}&0.37&0.44&0.04&1.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00\\\hline
-\textbf{20}&0.07&0.06&0.99&0.03&1.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00\\\hline
-\textbf{28}&0.05&0.07&0.88&0.06&0.88&1.00&0.00&0.00&0.00&0.00&0.00&0.00\\\hline
-\textbf{31}&0.22&0.26&0.02&0.35&0.02&0.03&1.00&0.00&0.00&0.00&0.00&0.00\\\hline
-\textbf{32}&0.20&0.25&0.01&0.32&0.01&0.03&0.99&1.00&0.00&0.00&0.00&0.00\\\hline
-\textbf{33}&0.21&0.25&0.01&0.33&0.01&0.03&0.99&1.00&1.00&0.00&0.00&0.00\\\hline
-\textbf{34}&0.22&0.26&0.02&0.35&0.02&0.03&1.00&0.99&0.99&1.00&0.00&0.00\\\hline
-\textbf{35}&-Inf&-Inf&-Inf&-Inf&-Inf&-Inf&-Inf&-Inf&-Inf&-Inf&-Inf&0.00\\\hline
-\textbf{36}&0.16&0.20&0.01&0.26&0.01&0.03&0.77&0.79&0.79&0.77&-0.00&1.00\\\hline
+\textbf{07}&1.00&0.93&0.07&0.37&0.07&0.05&0.22&0.20&0.21&0.22&-Inf&0.16\\\hline
+\textbf{10}&0.00&1.00&0.07&0.44&0.06&0.07&0.26&0.25&0.25&0.26&-Inf&0.20\\\hline
+\textbf{12}&0.00&0.00&1.00&0.04&0.99&0.88&0.02&0.01&0.01&0.02&-Inf&0.01\\\hline
+\textbf{17}&0.00&0.00&0.00&1.00&0.03&0.06&0.35&0.32&0.33&0.35&-Inf&0.26\\\hline
+\textbf{20}&0.00&0.00&0.00&0.00&1.00&0.88&0.02&0.01&0.01&0.02&-Inf&0.01\\\hline
+\textbf{28}&0.00&0.00&0.00&0.00&0.00&1.00&0.03&0.03&0.03&0.03&-Inf&0.03\\\hline
+\textbf{31}&0.00&0.00&0.00&0.00&0.00&0.00&1.00&0.99&0.99&1.00&-Inf&0.77\\\hline
+\textbf{32}&0.00&0.00&0.00&0.00&0.00&0.00&0.00&1.00&1.00&0.99&-Inf&0.79\\\hline
+\textbf{33}&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&1.00&0.99&-Inf&0.79\\\hline
+\textbf{34}&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&1.00&-Inf&0.77\\\hline
+\textbf{35}&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&-Inf&-0.00\\\hline
+\textbf{36}&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&0.00&1.00\\\hline
 \end{tabular}
 \end{tiny}
